:bug: Fix Eval page not wrapping correctly

--- a/Web/public/css/custom.css
+++ b/Web/public/css/custom.css
@@ -25,6 +25,10 @@
     color: #fff;
 }
 
+pre {
+    white-space: pre-wrap!important;
+}
+
 .is-hidden {
     display: none;
 }
